# 6DPose

./: .gitignore  main.py  pyproject.toml
meshes/: cart_structure.dae  model.urdf  picanol.ply  picanolcart.usdc
