[project]
name = "6dpose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.20.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.12.1",
    "ultralytics>=8.4.75",
]
